plugins {
    id "com.github.spotbugs" version "4.5.1"
    id "checkstyle"
    id "application"
    id "jacoco"
}

application {
    mainClass = 'game.Main'
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'junit:junit:4.12'
    implementation fileTree(dir: 'lib', include: ['*.jar'])
}

// Handle duplicates in distribution
distributions {
    main {
        contents {
            duplicatesStrategy = DuplicatesStrategy.EXCLUDE
        }
    }
}

// Set Java version compatibility using toolchains
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

test {}

///////////////////////////////////////////////////////////////////////
// Configure Checkstyle
///////////////////////////////////////////////////////////////////////
checkstyle {
    // Keep Checkstyle a little quieter
    ignoreFailures = true
    showViolations = false
    toolVersion = "8.29"
}

tasks.withType(Checkstyle).configureEach {
    reports {
        html.required.set(true)
        xml.required.set(false)
    }
}

///////////////////////////////////////////////////////////////////////
// Configure SpotBugs
///////////////////////////////////////////////////////////////////////
// To generate an HTML report instead of XML
tasks.named("spotbugsMain") {
    reports {
        xml.required.set(false)
        html.required.set(true)
    }
}

spotbugs {
    toolVersion = '4.0.0-beta4'
    ignoreFailures = true
    showProgress = true
    effort = 'max'
}